--- a/Dự án 1 nhóm 3/xshop/css/style1.css
+++ b/Dự án 1 nhóm 3/xshop/css/style1.css
@@ -338,7 +338,7 @@ input[type="button"] {
     padding: 5px;
     margin: 2px;
     background-color: #4CAF50;
-    border-radius: 5px;
+    border: none;
 }
 
 input[type="submit"]:hover,
@@ -346,7 +346,10 @@ input[type="reset"]:hover,
 input[type="button"]:hover {
     color: white;
     background-color: rgb(0, 128, 255);
-    border: 1px white solid;
+}
+.iconify:hover{
+    transform: matrix3d(0.9, 0, 0, 0, 0, 0.9, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+    transition: 0.2s;
 }
 
 input[type="text"],
